# ml-app

./: .gitignore  README.md  ml-app.sln
datasets/: CASP.csv  cpu.csv  cpu.small.csv  cpu2.csv  delta.ailerons.csv  kin8nm.csv  lr1.csv  lr2.csv  lr3.csv  puma.csv  stringFeaturesCheck.csv  test1.csv  test2.csv  test3.csv
homework1.0/: 1.cpp  GNUmakefile
manual_using/: 1.cpp  GNUmakefile
ml-app/: CMakeLists.txt  ml-app.vcxproj  ml-app.vcxproj.filters
ml-app/src/: CrossValidation.h  InfoProvider.h  LearningMachineLearning.cpp  LearningMachineLearning.h  algorithms.h  auxiliaryObjects.h  startMain.cpp
ml-app/src/algorithms/: Algo.cpp  Algo.h  BaggedAlg.h  BoostedAlg.h  ConstPrediction.cpp  ConstPrediction.h  DecisionStump.cpp  DecisionStump.h  DecisionTree.cpp  DecisionTree.h  KNN.cpp  KNN.h  LinearRegression.cpp  LinearRegression.h
ml-app/src/auxiliaryObjects/: ArgsForAlg.h  DataFrame.cpp  DataFrame.h  DecisionTreeRepresentation.cpp  DecisionTreeRepresentation.h  Obj.cpp  Obj.h  UsefulMath.cpp  UsefulMath.h
ml-app/tests/: start.py  startOnUnix.py
